# hevx

./: .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CMakeSettings.json  CTestConfig.cmake  LICENSE  README.md
cmake/: FindFilesystem.cmake  FindSphinx.cmake  FindVulkanSDK.cmake  HEVToolchain.cmake  HEVUserMakeRulesOverride.cmake  JSONParser.cmake
docs/: CMakeLists.txt  Doxyfile.in  api.rst  conf.py.in  deploy.sh  ecs_design.md  index.html  index.rst  iris.rst  pages.rst
docs/_static/css/: hevx_custom.css
docs/figures/: appflow.gv  renderer_architecture.gv
docs/html/: annotated.html  classes.html  classiris_1_1Renderer_1_1ErrorCategory-members.html  classiris_1_1Renderer_1_1ErrorCategory.html  classiris_1_1Renderer_1_1VulkanResultCategory-members.html  classiris_1_1Renderer_1_1VulkanResultCategory.html  classiris_1_1wsi_1_1Buttonset-members.html  classiris_1_1wsi_1_1Buttonset.html  classiris_1_1wsi_1_1ErrorCategory-members.html  classiris_1_1wsi_1_1ErrorCategory.html  classiris_1_1wsi_1_1Keyset-members.html  classiris_1_1wsi_1_1Keyset.html  classiris_1_1wsi_1_1Window-members.html  classiris_1_1wsi_1_1Window.html  classiris_1_1wsi_1_1Window_1_1Impl-members.html  classiris_1_1wsi_1_1Window_1_1Impl.html  config_8h.html  config_8h_source.html  dir_3c5b6d4b3192f661684f9b02e6a8b2a3.html  dir_7e6a98cfe22601867cff83299bd1e983.html  dir_823a7bdbeca9b83f57d630a2f1a7b9e0.html  dir_880c9ab099f60ff9fdeb7f847f49d887.html  dir_8c1150fcc477c781824cc9a6ef86b0dd.html  dir_94e2dba7ddf86ec91260f15b00f509d3.html  dir_ba23c10662006e42d879a8a967574951.html  dir_d8e5e3dd9efdc74a3d4d147355d71466.html  dir_dac89246e1eaa2c36bd7372ca9802d98.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  helpers_8h.html  helpers_8h_source.html  hierarchy.html  (+34 more)
docs/html/search/: all_62.js  all_63.js  all_65.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_76.js  all_77.js  classes_62.js  classes_65.js  classes_69.js  classes_6b.js  classes_6e.js  classes_76.js  classes_77.js  defines_69.js  enums_62.js  enums_65.js  enums_6b.js  enums_6f.js  enums_76.js  enumvalues_6b.js  files_65.js  files_72.js  files_76.js  files_77.js  functions_62.js  functions_63.js  functions_65.js  functions_67.js  functions_68.js  functions_69.js  functions_6b.js  (+19 more)
docs/namespaces/: iris.rst  iris_renderer.rst
docs/pages/: NIST_techniques_raytracing.md  control_commands.md  ecs_design.md  scenegraph.md
docs/sphinx/: contents.rst  index.rst
iris/: CMakeLists.txt  README.md  acceleration_structure.cc  acceleration_structure.h  buffer.cc  buffer.h  config.h.in  enumerate.h  error.h  flextvk_profile.txt  flextvk_profile_win32.txt  image.cc  image.h  iris-dxr.cc  iris-raytracer.cc  iris-shadertoy.cc  iris-swsynth.cc  iris-viewer.cc  logging.h  matrix_transform.h  pipeline.cc  pipeline.h  protos.h  renderer.cc  renderer.h  renderer_private.h  renderer_util.cc  renderer_util.h  safe_numeric.h  shader.cc  shader.h  skel.cc  string_util.cc  string_util.h  trackball.h  types.h  ui_util.h  vulkan.h  vulkan_support.cc  vulkan_support.h  (+5 more)
iris/assets/: shadertoy_playlist.json  shadertoy_sphere.json
iris/assets/data/: README.md
iris/assets/models/: gen-gnomon-buffer.py  gnomon.gltf  wireframe_cube.savg
iris/assets/models/BoxShaderToySpheres/: BoxShaderToySpheres.gltf
iris/assets/models/Gnomon/: gen-gnomon-buffer.py  gnomon.gltf  gnomon.py
iris/assets/models/RaytracedSpheres/: spheres.gltf
iris/assets/models/savg/: cube.savg  raytraced_spheres.savg  wireframe_cube.savg
iris/assets/shaders/: fsqEmpty.frag  fsqEmpty.vert  gltf.frag  gltf.vert  gltf_pbr.frag  lambertian.rchit  metal.rchit  miss.rmiss  prd.glsl  rand.glsl  raygen.rgen  savg.frag  savg.vert  sphere.glsl  sphere.rchit  sphere.rint
iris/assets/shaders/raytracing/: closest_hit.glsl  miss.glsl  raygen.glsl  sphere_intersect.glsl
iris/assets/shaders/shadertoy/: uv.frag
iris/assets/shadertoy/: shadertoy_sphere.json  shadertoy_uv.frag  shadertoy_uv.json  spheres.gltf
iris/components/: material.h  renderable.h  traceable.h
iris/configs/: 4kdesktop.json  desktop.json  nist_cave.json  simulator.json
iris/dso/: desktop_window.cc  desktop_window.h  dso.cc  dso.h
iris/flext/: gl_45_core.txt  vk_win32_khr.txt  vk_xcb_khr.txt  vk_xlib_khr.txt
iris/flext/vulkan/: flextVk.h.template
iris/flextvk_template/: flextVk.h.template
iris/io/: gltf.cc  gltf.h  json.cc  json.h  read_file.cc  read_file.h  savg.cc  savg.h  shadertoy.cc  shadertoy.h
iris/protos/: color.proto  control.proto  displays.proto  examine.proto  nav.proto  shadertoy.proto  window.proto
iris/renderer/: buffer.cc  buffer.h  command_buffers.cc  command_buffers.h  descriptor_set.cc  descriptor_set.h  descriptor_sets.cc  descriptor_sets.h  draw.h  error.h  glcontext.cc  glcontext.h  helpers.h  image.cc  image.h  impl.h  io.cc  io.h  mesh.cc  mesh.h  mikktspace-license.txt  mikktspace.c  model.h  pipeline.cc  pipeline.h  renderer.cc  renderer.h  shader.cc  shader.h  surface.cc  surface.h  tasks.h  ui.cc  ui.h  vulkan.h  vulkan_result.h  vulkan_support.cc  vulkan_support.h  window.cc  window.h
iris/renderer/io/: gltf.cc  gltf.h  impl.h  io.cc  io.h  json.cc  json.h  read_file.cc  read_file.h
iris/test/: CMakeLists.txt  safe_numeric.cc
iris/wsi/: error.h  error_codes.h  input.h  platform_window.cc  platform_window.h  platform_window_win32.cc  platform_window_win32.h  platform_window_x11.cc  platform_window_x11.h  window.cc  window.h  window_win32.cc  window_win32.h  window_x11.cc  window_x11.h
test/: CTestScript.cmake  Dockerfile.bionic  Dockerfile.cosmic  Dockerfile.el7  Dockerfile.f28  Dockerfile.f29  Dockerfile.xenial  README.md  build-vulkan-sdk.py  create-report.py  hevx-ci.sh
